RESOLVED FIXED210381
Fix mute/unmute of CoreAudioCapture sources after revision 257914
https://bugs.webkit.org/show_bug.cgi?id=210381
Summary Fix mute/unmute of CoreAudioCapture sources after revision 257914
youenn fablet
Reported 2020-04-11 07:34:51 PDT
Fix mute/unmute of CoreAudioCapture sources after revision 257914
Attachments
Patch (14.40 KB, patch)
2020-04-11 14:25 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2020-04-11 14:25:25 PDT
EWS
Comment 2 2020-04-13 09:35:35 PDT
Committed r260013: <https://trac.webkit.org/changeset/260013> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396191 [details].
Radar WebKit Bug Importer
Comment 3 2020-04-13 09:36:16 PDT
Note You need to log in before you can comment on or make changes to this bug.