Fix mute/unmute of CoreAudioCapture sources after revision 257914 https://bugs.webkit.org/show_bug.cgi?id=210381

Reviewed by Eric Carlson.

Source/WebCore:

Revert part of revision 257914 since we still need the active source registration/unregistration when capturing in web process.
Make sure mock factory delegates all active source handling to CoreAudioCaptureSourceFactory,
now that the mock factory is using CoreAudioCaptureSources with a mock share dunit.

Tests: platform/ios/mediastream/audio-muted-in-background-tab-gpu-process.html
       platform/ios/mediastream/getUserMedia-single-capture-gpu-process.html

* platform/mediastream/RealtimeMediaSourceFactory.h:
* platform/mediastream/mac/CoreAudioCaptureSource.cpp:
(WebCore::CoreAudioCaptureSource::~CoreAudioCaptureSource):
(WebCore::CoreAudioCaptureSource::startProducingData):
* platform/mock/MockRealtimeMediaSourceCenter.cpp:

LayoutTests:

       Clone tests for having both GPU and non GPU test runs.

* platform/ios/mediastream/audio-muted-in-background-tab-gpu-process-expected.txt: Added.
* platform/ios/mediastream/audio-muted-in-background-tab-gpu-process.html: Copied from LayoutTests/platform/ios/mediastream/audio-muted-in-background-tab.html.
* platform/ios/mediastream/audio-muted-in-background-tab.html:
* platform/ios/mediastream/getUserMedia-single-capture-gpu-process-expected.txt: Added.
* platform/ios/mediastream/getUserMedia-single-capture-gpu-process.html: Copied from LayoutTests/platform/ios/mediastream/getUserMedia-single-capture.html.
* platform/ios/mediastream/getUserMedia-single-capture.html:


Canonical link: https://commits.webkit.org/223319@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260013 268f45cc-cd09-0410-ab3c-d52691b4dbfc